@@ -34,8 +34,8 @@ HotKeyEdit::HotKeyEdit(QWidget *parent)
 void HotKeyEdit::updateText()
 {
     setText(0 == m_key? tr("(not set)"):
-          0  < m_key? QKeySequence(m_key).toString():
-          MouseShortcut::toString(m_key));
+        0  < m_key? QKeySequence(m_key).toString():
+        MouseShortcut::toString(m_key));
 }
 
 void HotKeyEdit::setKey(int key)
